<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>JavaProjects</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>1_JAVA_STUDY</module>
        <module>2_DESIGN_PATTERNS</module>
        <module>3_MULTITHREADING_TESTS</module>
        <module>4_COLLECTIONS_TESTS</module>
        <module>5_PERFORMANCE_TESTS</module>
        <module>6_BEST_PRACTICES</module>
        <module>7_ALGORITMS</module>
        <module>8_TEST_CONSOLE_PROJECT</module>
        <module>9_MATHEMATICAL_ALGORITHMS</module>
        <module>10_SecurityExperiments</module>
        <module>11_DataStructures</module>
        <module>ActiveMQ</module>
        <module>Apache_Projects_Tests</module>
        <module>Apache_Kafka</module>
        <module>Apache_Pulsar</module>
        <module>Apache_Pulsar_TestViewer</module>
        <module>Apache_JCS</module>
        <module>Apache_Jetty</module>
        <module>Apache_Mina</module>
        <module>InfluxDB</module>
        <module>Caching</module>
        <module>Database_Tests_Project</module>
        <module>FalseSharing_BenchMark</module>
        <module>Google_Guava</module>
        <module>Google_Protobuff</module>
        <module>Ignite</module>
        <module>JSON_Tests_Projects</module>
        <module>Lombok</module>
        <module>Networking_TCP_IP_TestApplication</module>
        <module>Networking_TCP_NettyTests</module>
        <module>Networking_TCP_NIO_Servers</module>
        <module>PDF_TestProject</module>
        <module>Perfrormance_Benchmarks</module>
        <module>Networking</module>
        <module>Swing_Tests_Project</module>
        <module>Continuous_Integration_Experiments</module>
        <module>Dependency_Injection</module>
        <module>JavaParser</module>
        <module>ParametersParsing</module>
        <module>Serialization</module>
        <module>SSRC_Experiments</module>
        <module>ObjectsPools</module>
        <module>NATS_Messaging</module>
        <module>Telegram</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>

        <junit.jupiter.version>5.10.2</junit.jupiter.version>
        <junit.platform.version>1.10.2</junit.platform.version>
        <allure.version>2.28.0</allure.version>
        <awaitility.version>4.2.1</awaitility.version>
        <assertj.version>3.26.3</assertj.version>
        <lombok.version>1.18.34</lombok.version>

        <apache.log4j.version>2.23.1</apache.log4j.version>
        <slf4j.version>2.0.13</slf4j.version>
        <commons.logging.version>1.3.3</commons.logging.version>
        <apache.lang.version>3.15.0</apache.lang.version>
        <apache.commons.io.version>2.16.1</apache.commons.io.version>
        <apache.commons.pool2.version>2.12.0</apache.commons.pool2.version>

        <reflections.version>0.10.2</reflections.version>

        <gson.version>2.10</gson.version>
        <json.simple.version>1.1.1</json.simple.version>

        <!-- To skip tests with 'mvn verify'-->
        <maven.test.skip>true</maven.test.skip>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-junit5</artifactId>
            <version>${allure.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
        </dependency>

        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>${json.simple.version}</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${apache.commons.io.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${apache.lang.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-pool2</artifactId>
            <version>${apache.commons.pool2.version}</version>
        </dependency>

        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>${reflections.version}</version>
        </dependency>

        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <version>${awaitility.version}</version>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <!--scope>test</scope-->
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-runner</artifactId>
            <version>${junit.platform.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>

        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>${commons.logging.version}</version>
        </dependency>

        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${apache.log4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${apache.log4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
            <scope>runtime</scope>
        </dependency>
    </dependencies>
    <repositories>
        <repository>
            <id>maven_central</id>
            <name>Maven Central</name>
            <url>https://repo.maven.apache.org/maven2/</url>
        </repository>
    </repositories>

</project>